--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -2,14 +2,12 @@
   <div class="searchElements">
     <mat-form-field
       class="searchTermInput"
-      appearance="fill"
-    >
+      appearance="fill">
       <mat-label>Search</mat-label>
       <input
         matInput
         placeholder="Insert Search terms here"
-        value=""
-      />
+        value="" />
       <mat-icon matSuffix>search</mat-icon>
     </mat-form-field>
     <app-search-options class="searchOptions"></app-search-options>
