--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -3,23 +3,20 @@
     <button
       mat-icon-button
       disableRipple
-      (click)="addRecipeTrigger()"
-    >
+      (click)="addRecipeTrigger()">
       <mat-icon class="add-icon">add</mat-icon>
     </button>
     <button
       mat-icon-button
       disableRipple
-      (click)="editRecipesTrigger()"
-    >
+      (click)="editRecipesTrigger()">
       <mat-icon class="edit-icon">edit</mat-icon>
     </button>
   </div>
   <button
     mat-icon-button
     disableRipple
-    (click)="settingsTrigger()"
-  >
+    (click)="settingsTrigger()">
     <mat-icon class="settings-icon">settings</mat-icon>
   </button>
 </div>
