--- a/src/app/components/dialogs/select-items-dialog/select-items-dialog.component.html
+++ b/src/app/components/dialogs/select-items-dialog/select-items-dialog.component.html
@@ -7,24 +7,20 @@
       (itemSelected)="onItemSelect($event)"
       [itemName]="headline"
       [refreshFilteredItems]="refreshAutocompleteItems.asObservable()"
-      [disableAddFunction]="onlyKnownItems"
-    ></app-autocomplete-with-add-function>
+      [disableAddFunction]="onlyKnownItems"></app-autocomplete-with-add-function>
 
     <table
       mat-table
-      [dataSource]="tableDataSource"
-    >
+      [dataSource]="tableDataSource">
       <ng-container matColumnDef="name">
         <th
           mat-header-cell
-          *matHeaderCellDef
-        >
+          *matHeaderCellDef>
           {{ headline }}
         </th>
         <td
           mat-cell
-          *matCellDef="let element"
-        >
+          *matCellDef="let element">
           {{ element }}
         </td>
       </ng-container>
@@ -33,18 +29,15 @@
         <th
           mat-header-cell
           *matHeaderCellDef
-          class="action"
-        ></th>
+          class="action"></th>
         <td
           mat-cell
-          *matCellDef="let element"
-        >
+          *matCellDef="let element">
           <button
             mat-icon-button
             disableRipple
             color="warn"
-            (click)="removeElement(element)"
-          >
+            (click)="removeElement(element)">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
@@ -52,20 +45,16 @@
 
       <tr
         mat-header-row
-        *matHeaderRowDef="columns"
-      ></tr>
+        *matHeaderRowDef="columns"></tr>
       <tr
         mat-row
-        *matRowDef="let row; columns: columns"
-      ></tr>
+        *matRowDef="let row; columns: columns"></tr>
       <tr
         class="mat-row"
-        *matNoDataRow
-      >
+        *matNoDataRow>
         <td
           class="mat-cell"
-          [attr.colspan]="columns.length"
-        >
+          [attr.colspan]="columns.length">
           No items added
         </td>
       </tr>
@@ -76,14 +65,12 @@
       mat-button
       [mat-dialog-close]="data"
       color="primary"
-      cdkFocusInitial
-    >
+      cdkFocusInitial>
       Apply
     </button>
     <button
       mat-button
-      mat-dialog-close
-    >
+      mat-dialog-close="">
       Cancel
     </button>
   </mat-dialog-actions>
