--- a/src/app/components/dialogs/two-button-dialog/two-button-dialog.component.html
+++ b/src/app/components/dialogs/two-button-dialog/two-button-dialog.component.html
@@ -8,15 +8,13 @@
       mat-button
       [mat-dialog-close]="true"
       color="primary"
-      cdkFocusInitial
-    >
+      cdkFocusInitial>
       Yes
     </button>
     <button
       mat-button
-      mat-dialog-close
-      color="warn"
-    >
+      mat-dialog-close=""
+      color="warn">
       No
     </button>
   </mat-dialog-actions>
