--- a/src/app/components/edit-recipes/edit-recipes.component.html
+++ b/src/app/components/edit-recipes/edit-recipes.component.html
@@ -3,19 +3,16 @@
   <div class="tableBackground tableContainer">
     <table
       mat-table
-      [dataSource]="tableDataSource"
-    >
+      [dataSource]="tableDataSource">
       <ng-container matColumnDef="name">
         <th
           mat-header-cell
-          *matHeaderCellDef
-        >
+          *matHeaderCellDef>
           Recipe
         </th>
         <td
           mat-cell
-          *matCellDef="let element"
-        >
+          *matCellDef="let element">
           {{ element.recipeName }}
         </td>
       </ng-container>
@@ -24,17 +21,14 @@
         <th
           mat-header-cell
           *matHeaderCellDef
-          class="action"
-        ></th>
+          class="action"></th>
         <td
           mat-cell
-          *matCellDef="let element"
-        >
+          *matCellDef="let element">
           <button
             mat-icon-button
             disableRipple
-            (click)="editRecipeTrigger(element)"
-          >
+            (click)="editRecipeTrigger(element)">
             <mat-icon>edit</mat-icon>
           </button>
         </td>
@@ -44,18 +38,15 @@
         <th
           mat-header-cell
           *matHeaderCellDef
-          class="action"
-        ></th>
+          class="action"></th>
         <td
           mat-cell
-          *matCellDef="let element"
-        >
+          *matCellDef="let element">
           <button
             mat-icon-button
             disableRipple
             color="warn"
-            (click)="openDeleteDialog(element)"
-          >
+            (click)="openDeleteDialog(element)">
             <mat-icon>delete</mat-icon>
           </button>
         </td>
@@ -63,20 +54,16 @@
 
       <tr
         mat-header-row
-        *matHeaderRowDef="columns; sticky: true"
-      ></tr>
+        *matHeaderRowDef="columns; sticky: true"></tr>
       <tr
         mat-row
-        *matRowDef="let row; columns: columns"
-      ></tr>
+        *matRowDef="let row; columns: columns"></tr>
       <tr
         class="mat-row"
-        *matNoDataRow
-      >
+        *matNoDataRow>
         <td
           class="mat-cell"
-          [attr.colspan]="columns.length"
-        >
+          [attr.colspan]="columns.length">
           No Recipes added yet
         </td>
       </tr>
