--- a/src/app/components/selected-items-display/selected-items-display.component.html
+++ b/src/app/components/selected-items-display/selected-items-display.component.html
@@ -1,72 +1,60 @@
 <div class="container tableBackground">
   <table
     mat-table
-    [dataSource]="tableDataSource"
-  >
+    [dataSource]="tableDataSource">
     <ng-container matColumnDef="name">
       <th
         mat-header-cell
-        *matHeaderCellDef
-      >
+        *matHeaderCellDef>
         {{ headline }}
       </th>
       <td
         mat-cell
-        *matCellDef="let element"
-      >
+        *matCellDef="let element">
         {{ element }}
       </td>
     </ng-container>
 
     <ng-container
       matColumnDef="action"
-      *ngIf="editable"
-    >
+      *ngIf="editable">
       <th
         mat-header-cell
         *matHeaderCellDef
-        class="action"
-      >
+        class="action">
         <button
           mat-icon-button
           disableRipple
           *ngIf="data.length === 0"
-          (click)="openDialog()"
-        >
+          (click)="openDialog()">
           <mat-icon>add</mat-icon>
         </button>
         <button
           mat-icon-button
           disableRipple
           *ngIf="data.length > 0"
-          (click)="openDialog()"
-        >
+          (click)="openDialog()">
           <mat-icon>edit</mat-icon>
         </button>
       </th>
       <td
         mat-cell
         *matCellDef
-        class="action"
-      ></td>
+        class="action"></td>
     </ng-container>
 
     <tr
       mat-header-row
-      *matHeaderRowDef="columns; sticky: true"
-    ></tr>
+      *matHeaderRowDef="columns; sticky: true"></tr>
     <tr
       mat-row
-      *matRowDef="let row; columns: columns"
-    ></tr>
+      *matRowDef="let row; columns: columns"></tr>
     <tr
       class="mat-row"
-      *matNoDataRow
-    >
+      *matNoDataRow>
       <td
         class="mat-cell"
-        [attr.colspan]="columns.length"
-      >
+        [attr.colspan]="columns.length">
         No items added
       </td>
     </tr>
