--- a/src/app/components/autocomplete-with-add-function/autocomplete-with-add-function.component.html
+++ b/src/app/components/autocomplete-with-add-function/autocomplete-with-add-function.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <mat-form-field appearance="fill">
+  <mat-form-field appearance="standard">
     <mat-label>{{ labelName }}</mat-label>
     <input
       type="text"
