--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -1,10 +1,13 @@
 .container {
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-evenly;
   align-items: center;
-  height: 100%;
-  width: 100%;
+  height: 40%;
+  width: 60%;
+  margin-left: 20%;
+  margin-top: 20%;
+  border-radius: 5px;
 }
 
 .searchElements {
@@ -15,12 +18,17 @@
   align-items: center;
 }
 
-.searchTermInput {
-  width: 100%;
-}
+//.container {
+//  border-radius: 5px;
+//  width: 100%;
+//  height: 100%;
+//  display: flex;
+//  flex-direction: row;
+//  justify-content: space-evenly;
+//  align-items: center;
+//}
 
-.searchOptions {
-  width: 100%;
-  height: 20vh;
-  padding: 1vh 0;
+app-selected-items-display {
+  height: 100%;
+  width: 25%;
 }
