--- a/src/app/components/selected-items-display/selected-items-display.component.scss
+++ b/src/app/components/selected-items-display/selected-items-display.component.scss
@@ -1,7 +1,8 @@
 .container {
   width: 100%;
   height: 100%;
-  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
 }
 
 table {
@@ -11,4 +12,19 @@ table {
 .action {
   width: 15%;
   padding-right: 6px !important;
+}
+
+.input {
+  width: 90%;
+  align-self: center;
+}
+
+h3 {
+  margin-left: 3%;
+  margin-bottom: 0;
+  margin-top: 1vh;
+}
+
+.table {
+  height: 75%;
 }
