finished item selection component

--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <app-selected-items-display
-    headline="Required Ingredients"
+    headline="Ingredients"
     [knownItems]="knownIngredients"
     [data]="selectedOptions.requiredIngredients"
     (updateData)="updateRequiredIngredients($event)"
