--- a/src/app/components/selected-items-display/selected-items-display.component.scss
+++ b/src/app/components/selected-items-display/selected-items-display.component.scss
@@ -3,6 +3,9 @@
   height: 100%;
   display: flex;
   flex-direction: column;
+  margin-bottom: 0;
+  padding-bottom: 0;
+  border-radius: 3px;
 }
 
 table {
@@ -27,4 +30,5 @@ h3 {
 
 .table {
   height: 75%;
+  overflow-y: auto;
 }
