--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,16 @@
 <div class="container">
-  <app-search></app-search>
+  <div class="content"></div>
   <app-sidebar
     (addRecipe)="toggleAddRecipe()"
     (editRecipes)="toggleEditRecipes()"
-    (settings)="toggleSettings()"></app-sidebar>
+    (settings)="toggleSettings()"
+    (search)="toggleSearch()"></app-sidebar>
+  <app-extensible-container
+    class="positionIndex0"
+    *ngIf="showSearch()">
+    <app-search
+      *ngIf="showSearch()"></app-search>
+  </app-extensible-container>
   <app-extensible-container
     class="positionIndex0"
     *ngIf="showEditRecipes()">
