--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,4 +1,5 @@
 <div class="container">
+  <h1>Search</h1>
   <app-selected-items-display
     headline="Ingredients"
     [knownItems]="knownIngredients"
@@ -22,4 +23,8 @@
     [rating]="selectedOptions.minimumRating"
     (newRating)="onNewRatingSelected($event)"
     labelAddition="Minimum"></app-rating-display>
+  <button
+    mat-raised-button
+    color="primary"
+    cdkfocusinitial>Search</button>
 </div>
