--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -1,24 +1,28 @@
+app-selected-items-display {
+  width: 80%;
+  min-height: 24vh;
+  max-height: 24vh;
+  padding-bottom: 2vh;
+}
+
+app-rating-display {
+  padding-bottom: 2vh;
+}
+
 .container {
   display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-  height: 40%;
-  width: 60%;
-  margin-left: 20%;
-  margin-top: 20%;
-  border-radius: 5px;
-}
-
-.searchElements {
-  width: 60%;
-  display: flex;
   flex-direction: column;
-  justify-content: center;
+  width: 100%;
+  height: 100%;
   align-items: center;
-}
+  overflow-y: auto;
 
-app-selected-items-display {
-  height: 90%;
-  width: 25%;
+  h1 {
+    margin-top: 2vh;
+    margin-bottom: 3vh;
+  }
+
+  button {
+    width: 30%;
+  }
 }
