--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -3,6 +3,12 @@
     <button
       mat-icon-button
       disableRipple
+      (click)="searchTrigger()">
+      <mat-icon class="add-icon">search</mat-icon>
+    </button>
+    <button
+      mat-icon-button
+      disableRipple
       (click)="addRecipeTrigger()">
       <mat-icon class="add-icon">add</mat-icon>
     </button>
