--- a/src/styles.scss
+++ b/src/styles.scss
@@ -74,6 +74,6 @@ app-extensible-container {
 .tableBackground {
   background-color: #424242;
 }
-app-search > .container {
+app-search {
   background-color: map.get(palette.$recipe-black-palette, 600);
 }
