--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,8 +8,7 @@
   <app-extensible-container
     class="positionIndex0"
     *ngIf="showSearch()">
-    <app-search
-      *ngIf="showSearch()"></app-search>
+    <app-search *ngIf="showSearch()"></app-search>
   </app-extensible-container>
   <app-extensible-container
     class="positionIndex0"
