--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -26,5 +26,7 @@
   <button
     mat-raised-button
     color="primary"
-    cdkfocusinitial>Search</button>
+    cdkfocusinitial>
+    Search
+  </button>
 </div>
