--- a/src/app/components/selected-items-display/selected-items-display.component.html
+++ b/src/app/components/selected-items-display/selected-items-display.component.html
@@ -1,5 +1,5 @@
 <div class="container tableBackground">
-  <h3>{{headline}}</h3>
+  <h3>{{ headline }}</h3>
 
   <app-autocomplete-with-add-function
     class="input"
@@ -8,8 +8,7 @@
     [clearOnSelect]="true"
     [itemName]="headline"
     (itemSelected)="onItemSelect($event)"
-    [filterFunction]="notAlreadyIncludedInData"
-  ></app-autocomplete-with-add-function>
+    [filterFunction]="notAlreadyIncludedInData"></app-autocomplete-with-add-function>
 
   <div class="table">
     <table
@@ -18,8 +17,7 @@
       <ng-container matColumnDef="name">
         <th
           mat-header-cell
-          *matHeaderCellDef>
-        </th>
+          *matHeaderCellDef></th>
         <td
           mat-cell
           *matCellDef="let element">
@@ -33,8 +31,7 @@
         <th
           mat-header-cell
           *matHeaderCellDef
-          class="action">
-        </th>
+          class="action"></th>
         <td
           mat-cell
           *matCellDef="let element"
