--- a/src/app/components/rating-display/rating-display.component.html
+++ b/src/app/components/rating-display/rating-display.component.html
@@ -5,8 +5,8 @@
   <div class="stars">
     <span *ngFor="let i of counter(5)">
       <mat-icon
-        [ngClass]="{ filledStar: rating >= i }"
-        (click)="updateRating(i)"
+        [ngClass]="{ filledStar: rating > i }"
+        (click)="updateRating(i + 1)"
         >star</mat-icon
       >
     </span>
