add recipe overview and details

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="content"></div>
+  <app-recipe-list></app-recipe-list>
   <app-sidebar
     (addRecipe)="toggleAddRecipe()"
     (editRecipes)="toggleEditRecipes()"
