css adjustments for smaller displays

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -16,7 +16,7 @@ app-sidebar {
 
 app-extensible-container {
   width: 20vw;
-  height: 100%;
+  height: 100vh;
   z-index: 1;
   position: absolute;
 }
