--- a/src/app/components/recipe-form/recipe-form.component.scss
+++ b/src/app/components/recipe-form/recipe-form.component.scss
@@ -4,6 +4,7 @@
   width: 100%;
   height: 100%;
   align-items: center;
+  overflow-y: auto;
 
   h1 {
     margin-top: 2vh;
@@ -28,9 +29,8 @@
 .buttons {
   width: 100%;
   display: flex;
-  position: absolute;
   justify-content: space-evenly;
-  bottom: 2%;
+  margin-bottom: 3%;
 
   button {
     width: 30%;
