continued implementing backdrop

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="container">
-  <app-recipe-list></app-recipe-list>
+  <app-backdrop></app-backdrop>
+<!--  <app-recipe-list></app-recipe-list>-->
   <app-sidebar
     (addRecipe)="toggleAddRecipe()"
     (editRecipes)="toggleEditRecipes()"
