--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -9,6 +9,11 @@ app-recipe-list {
   height: 100%;
 }
 
+app-backdrop {
+  width: 96vw;
+  height: 100%;
+}
+
 app-sidebar {
   width: 4vw;
   height: 100%;
