--- a/src/app/components/recipe-list/recipe-list.component.html
+++ b/src/app/components/recipe-list/recipe-list.component.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <div *ngFor="let recipe of getRecipes()" [ngClass]="{ overview: selectedRecipe !== recipe.id, detail: selectedRecipe === recipe.id }" (click)="selectRecipe(recipe.id)">
+<div class="container" *ngIf="showSearchResults">
+  <div *ngFor="let recipe of shownRecipes" [ngClass]="{ overview: selectedRecipe !== recipe.id, detail: selectedRecipe === recipe.id }" (click)="selectRecipe(recipe.id)">
     <app-recipe-overview *ngIf="selectedRecipe !== recipe.id" [recipe]="recipe"></app-recipe-overview>
     <app-recipe-detail *ngIf="selectedRecipe === recipe.id" [recipe]="recipe"></app-recipe-detail>
   </div>
