--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <app-backdrop></app-backdrop>
-<!--  <app-recipe-list></app-recipe-list>-->
+  <app-recipe-list></app-recipe-list>
   <app-sidebar
     (addRecipe)="toggleAddRecipe()"
     (editRecipes)="toggleEditRecipes()"
