--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -26,7 +26,8 @@
   <button
     mat-raised-button
     color="primary"
-    cdkfocusinitial>
+    cdkfocusinitial
+    (click)="onSearch()">
     Search
   </button>
 </div>
