--- a/src/app/components/content/recipe-detail/recipe-detail.component.html
+++ b/src/app/components/content/recipe-detail/recipe-detail.component.html
@@ -1,7 +1,9 @@
-<div class="container" *ngIf="recipe">
+<div
+  class="container"
+  *ngIf="recipe">
   <div class="title">
-    <h1>{{recipe.recipeName}}</h1>
-    <h4>Cookbook: {{recipe.cookbook}}</h4>
+    <h1>{{ recipe.recipeName }}</h1>
+    <h4>Cookbook: {{ recipe.cookbook }}</h4>
   </div>
   <div class="additionalInformation">
     <app-selected-items-display
@@ -13,6 +15,8 @@
       headline="Categories"
       [data]="recipe.categories"
       [editable]="false"></app-selected-items-display>
-    <app-rating-display [editable]="false" [rating]="recipe.rating"></app-rating-display>
+    <app-rating-display
+      [editable]="false"
+      [rating]="recipe.rating"></app-rating-display>
   </div>
 </div>
