--- a/src/app/components/util/toolbar/toolbar.component.html
+++ b/src/app/components/util/toolbar/toolbar.component.html
@@ -8,7 +8,7 @@
     <button mat-icon-button disableRipple>
       <mat-icon>web_asset</mat-icon>
     </button>
-    <button mat-icon-button disableRipple>
+    <button mat-icon-button disableRipple (click)="close()">
       <mat-icon>close</mat-icon>
     </button>
   </div>
