add escape function to close windows

--- a/src/app/components/dialogs/two-button-dialog/two-button-dialog.component.html
+++ b/src/app/components/dialogs/two-button-dialog/two-button-dialog.component.html
@@ -13,7 +13,7 @@
     </button>
     <button
       mat-button
-      mat-dialog-close=""
+      [mat-dialog-close]="false"
       color="warn">
       No
     </button>
