add items with enter in autocomplete

--- a/src/app/components/util/autocomplete-with-add-function/autocomplete-with-add-function.component.html
+++ b/src/app/components/util/autocomplete-with-add-function/autocomplete-with-add-function.component.html
@@ -3,8 +3,10 @@
     <mat-label>{{ labelName }}</mat-label>
     <input
       type="text"
-      placeholder="Pick from existing {{ itemName }} or add a new one"
+      placeholder="Pick from existing {{ itemName }}{{disableAddFunction ? '' : ' or add a new one'}}"
       matInput
+      #autoCompleteInputField
+      (keyup)="handleKeyUpEvent($event)"
       [formControl]="itemSelect"
       [matAutocomplete]="auto" />
     <mat-autocomplete #auto="matAutocomplete">
