--- a/src/app/components/content/recipe-list/recipe-list.component.scss
+++ b/src/app/components/content/recipe-list/recipe-list.component.scss
@@ -1,10 +1,10 @@
 .container {
   width: 100%;
-  height: 90vh;
+  height: 88%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 10vh;
+  margin-top: 6%;
   overflow-y: auto;
 }
 
@@ -20,7 +20,7 @@
 }
 
 .detail {
-  height: 45%;
+  height: 50%;
 }
 
 app-recipe-overview {
