update color palette

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,20 +10,13 @@
       (search)="toggleSearch()"></app-sidebar>
     <app-extensible-container
       class="positionIndex0"
-      *ngIf="showEditRecipes() || showSettings() || showSearch()">
+      *ngIf="showEditRecipes() || showSettings() || showSearch() || showAddRecipe() || showEditRecipe()">
       <app-edit-recipes
         *ngIf="showEditRecipes()"
         [reloadRecipes]="recipeEdited.asObservable()"
         (editRecipe)="editRecipe($event)"></app-edit-recipes>
       <app-settings *ngIf="showSettings()"></app-settings>
       <app-search *ngIf="showSearch()"></app-search>
-    </app-extensible-container>
-    <app-extensible-container
-      *ngIf="showAddRecipe() || showEditRecipe()"
-      [ngClass]="{
-      positionIndex0: showAddRecipe(),
-      positionIndex1: showEditRecipe()
-    }">
       <app-recipe-form
         *ngIf="showAddRecipe() || showEditRecipe()"
         (recipeChange)="recipeChange()"
