--- a/src/palette.scss
+++ b/src/palette.scss
@@ -76,16 +76,16 @@ $recipe-red-palette: (
 );
 
 $recipe-black-palette: (
-  50: #f3f8fd,
-  100: #ebf0f5,
-  200: #e0e5ea,
-  300: #cfd4d8,
-  400: #aaafb3,
-  500: #8a8f93,
-  600: #63676b,
-  700: #4f5457,
-  800: #323639,
-  900: #121619,
+  50: #fbfbfb,
+  100: #f6f6f6,
+  200: #f1f1f1,
+  300: #e5e5e5,
+  400: #c3c3c3,
+  500: #a5a5a5,
+  600: #484848,
+  700: #3D3D3D,
+  800: #313131,
+  900: #262626,
   contrast: (
     50: rgba(black, 0.87),
     100: rgba(black, 0.87),
