hide search panel on search always check if changes could be discarded

--- a/src/app/components/util/selected-items-display/selected-items-display.component.html
+++ b/src/app/components/util/selected-items-display/selected-items-display.component.html
@@ -5,7 +5,7 @@
     *ngIf="editable"
     class="input"
     [knownItems]="knownItems"
-    [labelName]="'Add / Select ' + headline"
+    [labelName]="(onlyKnownItemsSelectable ? '' : 'Add / ') +  'Select ' + headline"
     [clearOnSelect]="true"
     [itemName]="headline"
     (itemSelected)="onItemSelect($event)"
