--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,10 +4,10 @@
     <app-backdrop></app-backdrop>
     <app-recipe-list></app-recipe-list>
     <app-sidebar
-      (addRecipe)="toggleAddRecipe()"
-      (editRecipes)="toggleEditRecipes()"
-      (settings)="toggleSettings()"
-      (search)="toggleSearch()"></app-sidebar>
+      (addRecipe)="viewSelected(ExtendedOption.ADD)"
+      (editRecipes)="viewSelected(ExtendedOption.EDIT)"
+      (settings)="viewSelected(ExtendedOption.SETTINGS)"
+      (search)="viewSelected(ExtendedOption.SEARCH)"></app-sidebar>
     <app-extensible-container
       class="positionIndex0"
       *ngIf="showEditRecipes() || showSettings() || showSearch() || showAddRecipe() || showEditRecipe()">
@@ -16,7 +16,8 @@
         [reloadRecipes]="recipeEdited.asObservable()"
         (editRecipe)="editRecipe($event)"></app-edit-recipes>
       <app-settings *ngIf="showSettings()"></app-settings>
-      <app-search *ngIf="showSearch()"></app-search>
+      <app-search *ngIf="showSearch()"
+      (onSearchStarted)="toggleSearch()"></app-search>
       <app-recipe-form
         *ngIf="showAddRecipe() || showEditRecipe()"
         (recipeChange)="recipeChange()"
