--- a/src/app/components/sidebar/recipe-form/recipe-form.component.html
+++ b/src/app/components/sidebar/recipe-form/recipe-form.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h1>{{ editing ? "Edit Recipe" : "Add a Recipe" }}</h1>
   <div class="inputs">
-    <mat-form-field appearance="fill">
+    <mat-form-field >
       <mat-label>Recipe Name</mat-label>
       <input
         matInput
