--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,6 +10,8 @@
 // Be sure that you only ever include this mixin once!
 @include mat.core();
 
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@800&display=swap');
+
 $RecipeLibrary-dark-primary: mat.define-palette(palette.$recipe-green-palette, 500, 300, 700);
 $RecipeLibrary-dark-accent: mat.define-palette(palette.$recipe-yellow-palette, 300);
 $RecipeLibrary-dark-warn: mat.define-palette(palette.$recipe-red-palette, 300, 200, 400);
@@ -92,3 +94,5 @@ app-recipe-overview > .container {
 app-recipe-detail > .container {
   background-color: map.get(palette.$recipe-black-palette, 700);
 }
+
+// D65A31
