--- a/src/app/components/content/backdrop/backdrop.component.scss
+++ b/src/app/components/content/backdrop/backdrop.component.scss
@@ -1,3 +1,6 @@
+@use "src/palette";
+@use "sass:map";
+
 .container {
   width: 100%;
   height: 100%;
@@ -22,8 +25,8 @@ h1 {
   font-size: 6rem;
   margin-bottom: 6vh;
   font-family: 'JetBrains Mono', serif;
-  color: #262626;
-  text-shadow: 0 4px 4px #313131, 0 0 0 #000, 0 4px 4px #313131;
+  color: map.get(palette.$recipe-black-palette, 900);
+  text-shadow: 0 4px 4px map.get(palette.$recipe-black-palette, 800), 0 0 0 #000, 0 4px 4px map.get(palette.$recipe-black-palette, 800);
   text-align: center;
 }
 
