add custom scrollbar css

--- a/src/app/components/util/selected-items-display/selected-items-display.component.scss
+++ b/src/app/components/util/selected-items-display/selected-items-display.component.scss
@@ -32,3 +32,17 @@ h3 {
   height: 75%;
   overflow-y: auto;
 }
+
+/**
+  Scrollbar
+ */
+*::-webkit-scrollbar-track {
+  background: #3d3d3d;
+}
+
+/**
+  Scrollbar Firefox
+ */
+* {
+  scrollbar-color: #d65a31 #3d3d3d;
+}
