toolbar fixed height

--- a/src/app/components/util/toolbar/toolbar.component.html
+++ b/src/app/components/util/toolbar/toolbar.component.html
@@ -2,14 +2,14 @@
   <!-- Spacer -->
   <div></div>
   <div class="toolbarActions">
-    <button mat-icon-button disableRipple>
-      <mat-icon>minimize</mat-icon>
+    <button class="minimize" mat-icon-button disableRipple>
+      <mat-icon inline="true">minimize</mat-icon>
     </button>
     <button mat-icon-button disableRipple>
-      <mat-icon>web_asset</mat-icon>
+      <mat-icon inline="true">web_asset</mat-icon>
     </button>
-    <button mat-icon-button disableRipple (click)="close()">
-      <mat-icon>close</mat-icon>
+    <button class="close" mat-icon-button disableRipple (click)="close()">
+      <mat-icon inline="true">close</mat-icon>
     </button>
   </div>
 </div>
