--- a/src/styles.scss
+++ b/src/styles.scss
@@ -116,3 +116,7 @@ app-recipe-detail > .container {
   border-radius: 10px;
   border: 3px none #ffffff;
 }
+
+app-toolbar .mat-icon-button {
+  line-height: 20px;
+}
