--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,13 +8,13 @@
 .windowContent {
   display: flex;
   width: 100%;
-  height: 97%;
+  height: calc(100% - 20px);
   -webkit-app-region: no-drag;
 }
 
 app-toolbar {
   width: 100%;
-  height: 3%;
+  height: 20px;
   -webkit-app-region: drag;
 
   button {
@@ -29,7 +29,7 @@ app-recipe-list {
 
 app-backdrop {
   width: 96vw;
-  height: 97%;
+  height: calc(100% - 20px);
   position: absolute;
   z-index: -1;
 }
@@ -41,7 +41,7 @@ app-sidebar {
 
 app-extensible-container {
   width: 20vw;
-  height: 97%;
+  height: calc(100% - 20px);
   z-index: 1;
   position: absolute;
 }
