added outside click close, fixed error

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,10 @@
 <div class="container">
   <app-toolbar></app-toolbar>
   <div class="windowContent">
-    <app-backdrop></app-backdrop>
-    <app-recipe-list></app-recipe-list>
+    <div class="content" (click)="closeExtensibleContainer()">
+      <app-backdrop></app-backdrop>
+      <app-recipe-list></app-recipe-list>
+    </div>
     <app-sidebar
       (addRecipe)="viewSelected(ExtendedOption.ADD)"
       (editRecipes)="viewSelected(ExtendedOption.EDIT)"
