--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -27,6 +27,11 @@ app-recipe-list {
   height: 100%;
 }
 
+.content {
+  width: 96vw;
+  height: 100%;
+}
+
 app-backdrop {
   width: 96vw;
   height: calc(100% - 20px);
