change font size

--- a/src/app/components/sidebar/recipe-form/recipe-form.component.scss
+++ b/src/app/components/sidebar/recipe-form/recipe-form.component.scss
@@ -9,6 +9,8 @@
   h1 {
     margin-top: 2vh;
     margin-bottom: 2vh;
+    font-family: 'JetBrains Mono', serif;
+    font-size: 1.8rem;
   }
 
   mat-form-field {
