--- a/src/app/components/sidebar/search/search.component.scss
+++ b/src/app/components/sidebar/search/search.component.scss
@@ -20,6 +20,8 @@ app-rating-display {
   h1 {
     margin-top: 2vh;
     margin-bottom: 2vh;
+    font-family: 'JetBrains Mono', serif;
+    font-size: 1.8rem;
   }
 
   button {
