--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -23,7 +23,7 @@ app-toolbar {
 }
 
 app-recipe-list {
-  width: 96vw;
+  width: 100%;
   height: 100%;
 }
 
@@ -33,7 +33,7 @@ app-recipe-list {
 }
 
 app-backdrop {
-  width: 96vw;
+  width: 100%;
   height: calc(100% - 20px);
   position: absolute;
   z-index: -1;
@@ -55,6 +55,26 @@ app-extensible-container {
   right: 4vw;
 }
 
-.positionIndex1 {
-  right: 24vw;
+@media screen and (max-width: 1280px) {
+  app-extensible-container {
+    width: 25vw;
+  }
+}
+
+@media screen and (max-width: 1500px){
+  app-sidebar {
+    width: 6vw;
+  }
+
+  .content {
+    width: 94vw;
+  }
+
+  .positionIndex0 {
+    right: 6vw;
+  }
+
+  app-extensible-container {
+    width: 25vw;
+  }
 }
