--- a/src/app/components/sidebar/search/search.component.scss
+++ b/src/app/components/sidebar/search/search.component.scss
@@ -29,3 +29,10 @@ app-rating-display {
     margin-bottom: 3%;
   }
 }
+
+@media screen and (max-height: 720px){
+  app-selected-items-display {
+    min-height: 35vh;
+    max-height: 35vh;
+  }
+}
