--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -5,7 +5,7 @@
       disableRipple
       (click)="searchTrigger()"
       [ngClass]="{ active: searchRefActive() }">
-      <mat-icon class="add-icon">search</mat-icon>
+      <mat-icon class="search-icon">search</mat-icon>
     </button>
     <button
       mat-icon-button
